--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^4.2.0",
     "react-loading-skeleton": "^2.2.0",
     "react-modal": "^3.14.2",
+    "react-select": "^4.3.1",
     "swr": "^0.5.6",
     "typescript": "^4.1.3"
   },
