--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next-seo": "^4.24.0",
     "nprogress": "^0.2.0",
     "react": "17.0.1",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "17.0.1",
     "react-icons": "^4.2.0",
     "react-loading-skeleton": "^2.2.0",
