--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^17.0.0",
     "axios": "^0.21.1",
     "date-fns": "^2.22.1",
+    "html-react-parser": "^1.3.0",
     "mongoose": "^5.12.13",
     "next": "10.0.5",
     "next-auth": "^3.25.0",
@@ -26,6 +27,8 @@
     "react-loading-skeleton": "^2.2.0",
     "react-modal": "^3.14.2",
     "react-select": "^4.3.1",
+    "showdown": "^1.9.1",
+    "showdown-htmlescape": "^0.1.9",
     "swr": "^0.5.6",
     "typescript": "^4.1.3"
   },
