--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nprogress": "^0.2.0",
     "react": "17.0.1",
     "react-beautiful-dnd": "^13.1.0",
+    "react-confetti": "^6.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.2.0",
     "react-loading-skeleton": "^2.2.0",
